made sure newest staging was merged into fixedposition branch and updated code to include functionality for fixed position of header and footer as well as dealing with overlap

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -31,6 +31,9 @@ body {
 }
 
 #header {
+  position: fixed;
+  width: 100%;
+  top: 0px;
   background-color: rgb(49, 158, 107);
   display: flex;
   justify-content: space-between;
@@ -63,6 +66,9 @@ body {
 }
 
 #footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
   background-color: rgb(49, 158, 107);
   display: flex;
   justify-content: space-between;
